docs(status): record BAF javadoc JPMS module-mode publish failure + fix
Same family as the CI code-style gate incident: a failure that only the
publish/deploy job runs (every other job skips javadoc), so it escaped PR
CI and failed only on the snapshot publish to main.

Captures: the non-deterministic "No source files for package ..." symptom,
the module-mode root cause, why only BAF trips it (javadoc <source>21> +
module-info.java hidden in src/main/java9; the other three are immune only
because their javadoc <source> is 8 -> classpath mode), the latent
cross-repo risk when a Java-8 repo bumps to >=9, the fix (attach-javadocs
at prepare-package, declared before maven-compiler-plugin), and the
recurring detection-gap lesson (publish-only steps escape PR CI).